GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/Allocation_Booking__c.object-meta.xml
<CustomObject>
    <label>Allocation Booking</label>
    <nameField>
        <displayFormat>AB{00000}</displayFormat>
        <label>Allocation Booking</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Allocation Bookings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>