GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Booking_Reference__c.field-meta.xml
<CustomField>
    <fullName>Booking_Reference__c</fullName>
    <label>Booking Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>