GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Business_Account_Entity__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Entity__c</fullName>
    <formula>IF(ISBLANK(Business_Account__c),Account_Name__r.Name,Business_Account__r.Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Account/Entity</label>
    <type>Text</type>
</CustomField>