GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Cancelled_Booking__c.field-meta.xml
<CustomField>
    <fullName>Cancelled_Booking__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cancelled Booking</label>
    <type>Checkbox</type>
</CustomField>