GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Class_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Class_Outbound__c</fullName>
    <label>Class</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_PSA__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Standard Premier</fullName>
            </value>
            <value>
                <fullName>Business Premier</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>