GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Date_of_Ticketing__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Ticketing__c</fullName>
    <label>Date of Ticketing</label>
    <type>Date</type>
</CustomField>