GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Date_of_Travel__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Travel__c</fullName>
    <label>Date of Travel</label>
    <type>Date</type>
</CustomField>