GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Issued_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Issued_Outbound__c</fullName>
    <label>Issued</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>