GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Managed__c.field-meta.xml
<CustomField>
    <fullName>Managed__c</fullName>
    <formula>IF(ISBLANK(Business_Account__c),TEXT(Account_Name__r.Managed__c),TEXT(Business_Account__r.Managed__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Managed?</label>
    <type>Text</type>
</CustomField>