GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/One_Way_Return__c.field-meta.xml
<CustomField>
    <fullName>One_Way_Return__c</fullName>
    <label>One Way / Return</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One Way</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>