GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Prize_Winner_Reference__c.field-meta.xml
<CustomField>
    <fullName>Prize_Winner_Reference__c</fullName>
    <label>Prize Winner Reference</label>
    <length>100</length>
    <type>Text</type>
</CustomField>