GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/PSA_End_Date__c.field-meta.xml
<CustomField>
    <fullName>PSA_End_Date__c</fullName>
    <formula>PSA__r.End_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSA End Date</label>
    <type>Date</type>
</CustomField>