GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/PSA_Year__c.field-meta.xml
<CustomField>
    <fullName>PSA_Year__c</fullName>
    <formula>Text(PSA__r.Year__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PSA Year</label>
    <type>Text</type>
</CustomField>