GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Record_Manager__c.field-meta.xml
<CustomField>
    <fullName>Record_Manager__c</fullName>
    <formula>Business_Account__r.Owner:User.FirstName + &quot; &quot; +  Business_Account__r.Owner:User.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Manager</label>
    <type>Text</type>
</CustomField>