GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Remaining_Balance_Outbound__c.field-meta.xml
<CustomField>
    <fullName>Remaining_Balance_Outbound__c</fullName>
    <label>Remaining Balance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>