GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Ticket_Type_Inbound__c.field-meta.xml
<CustomField>
    <fullName>Ticket_Type_Inbound__c</fullName>
    <label>Ticket Type Inbound</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Ticket_Type_Outbound__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Educational Independant Fam</fullName>
            </value>
            <value>
                <fullName>Educational Client Fam</fullName>
            </value>
            <value>
                <fullName>Educational Experience Day</fullName>
            </value>
            <value>
                <fullName>VIP</fullName>
            </value>
            <value>
                <fullName>Prize Winner</fullName>
            </value>
            <value>
                <fullName>Press</fullName>
            </value>
            <value>
                <fullName>Exclusive SP Carriage</fullName>
            </value>
            <value>
                <fullName>Educational Account Management</fullName>
            </value>
            <value>
                <fullName>Educational Client</fullName>
            </value>
            <value>
                <fullName>Educational Consultant</fullName>
            </value>
            <value>
                <fullName>Invitation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>