GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Traveller_Name__c.field-meta.xml
<CustomField>
    <fullName>Traveller_Name__c</fullName>
    <label>Traveller Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>