GearsetPOC/force-app/main/default/objects/Allocation_Booking__c/fields/Type_of_PSA__c.field-meta.xml
<CustomField>
    <fullName>Type_of_PSA__c</fullName>
    <label>Type of PSA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Leisure Agent PSA</fullName>
            </value>
            <value>
                <fullName>TMC PSA</fullName>
            </value>
            <value>
                <fullName>Partnership PSA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>